# python-recipes

./: .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  main.yaml
src/python_recipes/: __main__.py  cli.py  lazy_loaders.py  lazy_modules.py
